# pace

./: .env.example  .gitignore  README.md  docker-compose.yml  simulate_telemetry.php  simulate_telemetry.py
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api-php/: Dockerfile  composer.json
apps/api-php/public/: index.php
apps/api-php/src/: CostCalculator.php  Database.php
apps/api-php/src/Services/: AnomalyDetector.php  BudgetService.php  CsvExporter.php
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: main.py
apps/api/app/api/v1/: analytics.py  api_keys.py  auth.py  budgets.py  exports.py  ingest.py  pricing.py  projects.py  system.py
apps/api/app/core/: config.py  database.py  logging.py  rate_limit.py  security.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/schemas/: schemas.py
apps/api/app/services/: alert_service.py  anomaly_service.py  budget_service.py
apps/api/app/worker/: scheduler.py
apps/api/pace_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_budgets_and_anomalies.py  test_endpoints_extended.py  test_foundation.py
apps/web/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: ApiKeyModal.tsx  CreateProjectModal.tsx  Navbar.tsx  (+1 more)
docs/: demo-script.md
examples/php-laravel/: PaceServiceProvider.php
examples/php-laravel/config/: pace.php
examples/php-symfony/: PaceBundle.php
(+12 files in other folders)
